Prevent "Hot topics" from covering search results

--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -2476,7 +2476,6 @@ h4#hot-topics {
   text-align: center;
   top: -7px;
   width: 200px;
-  z-index: 111;
   padding-left: 25px;
 }
 
